Fix HTML structure and update input attributes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           type="text"
           id="name"
           name="name"
-          maxlength="15"
-          class="box 1"
+          maxlength="50"
+          class="box"
           required
         /><br /><br />
         <label for="mail">Email:</label><br />
@@ -26,7 +26,7 @@
           id="mail"
           type="email"
           name="email"
-          class="box 2"
+          class="box"
           required
         /><br /><br />
         <label for="pass">Password:</label><br />
@@ -34,7 +34,7 @@
           id="pass"
           type="password"
           name="password"
-          class="box 3"
+          class="box"
           required
           minlength="8"
           maxlength="20"
@@ -96,3 +96,4 @@
     </form>
   </body>
 </html>
+
