--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           type="text"
           id="name"
           name="name"
-          maxlength="50"
+          <!-- maxlength="50" -->
           class="box"
           required
         /><br /><br />
@@ -96,4 +96,5 @@
     </form>
   </body>
 </html>
+
 
