Refactor sign-up form in index.html
Updated input field attributes and fixed HTML structure.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           type="text"
           id="name"
           name="name"
-          <!-- maxlength="50" -->
+          maxlength="70"
           class="box"
           required
         /><br /><br />
@@ -96,5 +96,6 @@
     </form>
   </body>
 </html>
+
 
 
