Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         ></textarea
         ><br /><br />
         <label for="jr">Job Role:</label><br />
-        <select name="job-role" id="jr" class="box 4" required>
+        <select name="job-role" id="jr" class="box" required>
           <option>Frontend Developer</option>
-          <option>PHP Develover</option>
+          <option>PHP Developer</option>
           <option>Web designer</option>
           <option>Python Developer</option>
           <option>Word Press Developer</option>
@@ -96,6 +96,7 @@
     </form>
   </body>
 </html>
+
 
 
 
